k8s/webserver-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: webserver-db-deployment
    name: webserver-db-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: webserver-db-deployment
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                io.kompose.service: webserver-db-deployment
        spec:
            containers:
                - args:
                      - --default-authentication-plugin=mysql_native_password
                  image: mysql
                  name: webserver-db
                  ports:
                      - containerPort: 3306
                  resources: {}
                  volumeMounts:
                      - mountPath: /var/lib/mysql
                        name: webserver-db-claim0
            restartPolicy: Always
            volumes:
                - name: webserver-db-claim0
                  persistentVolumeClaim:
                      claimName: webserver-db-claim0
status: {}
