k8s/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: webserver-deployment
    name: webserver-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: webserver-deployment
    strategy: {}
    template:
        metadata:
            labels:
                io.kompose.service: webserver-deployment
        spec:
            containers:
                - image: ghcr.io/h1ghbre4k3r/k8s-deploy
                  imagePullPolicy: Always
                  name: webserver-deployment
                  ports:
                      - containerPort: 3000
                  resources: {}
            restartPolicy: Always
status: {}
