k8s/webserver-db-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: webserver-db-service
    name: webserver-db-service
spec:
    ports:
        - name: "3306"
          port: 3306
          targetPort: 3306
    selector:
        io.kompose.service: webserver-db-deployment
status:
    loadBalancer: {}
