k8s/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
    creationTimestamp: null
    labels:
        io.kompose.service: webserver-service
    name: webserver-service
spec:
    ports:
        - name: "23337"
          port: 23337
          targetPort: 3000
    selector:
        io.kompose.service: webserver-deployment
status:
    loadBalancer: {}
