k8s/webserver-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: webserver-ingress
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`netcup.pesca.dev`)
          kind: Rule
          services:
              - name: webserver-service
                port: 23337
    tls:
        certResolver: le
